fix gap problem on portfoli page

--- a/scss/component/_portfolio-page.scss
+++ b/scss/component/_portfolio-page.scss
@@ -83,6 +83,7 @@
             text-align: center;
             margin-bottom:85px;
             padding: 0 4rem;
+            box-sizing: border-box;
             p{
                 margin-top:5px;
                 display: block;
