--- a/scss/layout/_media.scss
+++ b/scss/layout/_media.scss
@@ -888,7 +888,8 @@
     .portfolio-section {
         .portfolios{
             .item{
-                flex-basis:47%;
+                flex-basis:50%;
+                
                 padding: 0 2rem;
                 margin-bottom:30px;
             }
